--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -28,7 +28,7 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
+    <item row="2" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QPushButton" name="saveFramesButton">
@@ -148,6 +148,9 @@
        </widget>
       </item>
      </layout>
+    </item>
+    <item row="1" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout2"/>
     </item>
    </layout>
   </widget>
