`EnergyWidget` lässt sich umstandslos beenden; zwei Spektren werden angezeigt. `FFT::DFT()` ist jetzt eine normale Methode.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -169,7 +169,22 @@
      </layout>
     </item>
     <item row="1" column="0">
-     <layout class="QHBoxLayout" name="horizontalLayout2"/>
+     <widget class="QGroupBox" name="groupBox">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="title">
+       <string>Non real-time sound analysis</string>
+      </property>
+      <layout class="QGridLayout" name="gridLayout_2">
+       <item row="0" column="0">
+        <layout class="QHBoxLayout" name="horizontalLayout2"/>
+       </item>
+      </layout>
+     </widget>
     </item>
    </layout>
   </widget>
