--- a/settingsform.ui
+++ b/settingsform.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>420</width>
-    <height>203</height>
+    <height>234</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -44,7 +44,7 @@
        <item>
         <widget class="QLineEdit" name="mencoderPathLineEdit">
          <property name="text">
-          <string>D:/Developer/mencoder/mencoder.exe</string>
+          <string/>
          </property>
         </widget>
        </item>
@@ -120,14 +120,14 @@
        </item>
       </layout>
      </item>
-     <item row="4" column="0">
+     <item row="6" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
         <string>Audio bitrate</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
+     <item row="6" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_6">
        <item>
         <widget class="QSpinBox" name="audioBitrateSpinBox">
@@ -160,6 +160,37 @@
           </size>
          </property>
         </spacer>
+       </item>
+      </layout>
+     </item>
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_6">
+       <property name="text">
+        <string>LAVC options</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="QLineEdit" name="lavcOptionsLineEdit"/>
+     </item>
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_7">
+       <property name="text">
+        <string>Subtitle font</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_7">
+       <item>
+        <widget class="QLineEdit" name="subtitleFontLineEdit"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="chooseSubtitleFontPushButton">
+         <property name="text">
+          <string>Choose ...</string>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
