--- a/settingsform.ui
+++ b/settingsform.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>420</width>
-    <height>234</height>
+    <height>283</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -32,6 +32,9 @@
    </item>
    <item row="0" column="0">
     <layout class="QFormLayout" name="formLayout">
+     <property name="fieldGrowthPolicy">
+      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+     </property>
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
@@ -120,14 +123,45 @@
        </item>
       </layout>
      </item>
-     <item row="6" column="0">
+     <item row="5" column="0">
+      <widget class="QLabel" name="label_7">
+       <property name="text">
+        <string>Subtitle font</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <layout class="QHBoxLayout" name="horizontalLayout_7">
+       <item>
+        <widget class="QLineEdit" name="subtitleFontLineEdit"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="chooseSubtitleFontPushButton">
+         <property name="text">
+          <string>Choose ...</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="7" column="0">
+      <widget class="QLabel" name="label_6">
+       <property name="text">
+        <string>LAVC options</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="1">
+      <widget class="QLineEdit" name="lavcOptionsLineEdit"/>
+     </item>
+     <item row="8" column="0">
       <widget class="QLabel" name="label_5">
        <property name="text">
         <string>Audio bitrate</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
+     <item row="8" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_6">
        <item>
         <widget class="QSpinBox" name="audioBitrateSpinBox">
@@ -163,36 +197,15 @@
        </item>
       </layout>
      </item>
-     <item row="5" column="0">
-      <widget class="QLabel" name="label_6">
-       <property name="text">
-        <string>LAVC options</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="1">
-      <widget class="QLineEdit" name="lavcOptionsLineEdit"/>
-     </item>
-     <item row="4" column="0">
-      <widget class="QLabel" name="label_7">
-       <property name="text">
-        <string>Subtitle font</string>
-       </property>
-      </widget>
-     </item>
      <item row="4" column="1">
-      <layout class="QHBoxLayout" name="horizontalLayout_7">
-       <item>
-        <widget class="QLineEdit" name="subtitleFontLineEdit"/>
-       </item>
-       <item>
-        <widget class="QPushButton" name="chooseSubtitleFontPushButton">
-         <property name="text">
-          <string>Choose ...</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
+      <widget class="QCheckBox" name="showArtistTitleCheckBox">
+       <property name="text">
+        <string>Show artist/title at end of video</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
