Encoding can be canceled.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -79,6 +79,19 @@
        </widget>
       </item>
       <item>
+       <widget class="QSpinBox" name="offsetSpinBox">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="toolTip">
+         <string>Frame offset</string>
+        </property>
+        <property name="maximum">
+         <number>0</number>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
