--- a/lolqt.qrc
+++ b/lolqt.qrc
@@ -5,5 +5,6 @@
     <qresource prefix="/images">
         <file>waveform.png</file>
         <file>drop-icon.png</file>
+        <file>help-browser.png</file>
     </qresource>
 </RCC>
